--- a/pid.ini
+++ b/pid.ini
@@ -1,8 +1,10 @@
-kp=2
-ki=0.05
-kd=0.03
+kp=0.28
+ki=0.0553574112
+kd=0.5310942
 tau=0.025
-limMin=-1
-limMax=1
-limIntMin=-0.5
+limMin=0.25
+limMax=0.75
+limIntMin=0.25
 limIntMax=0.5
+setpoint=200.0
+pid_time=0.05
