adding rudimentary UI so the desired hold speed can be set by using commnd ref (using a button) and speed is displayed in a widget TODO: change widget to borderless window permanently shown on screen show indicator if auto throttle is enabled or not

--- a/XPlugin/XPlugin.vcxproj
+++ b/XPlugin/XPlugin.vcxproj
@@ -130,7 +130,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>C:\Users\iceri\source\repos\AutoThrottle\XPSDK\CHeaders;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\iceri\source\repos\AutoThrottle\XPSDK\CHeaders\Widgets;C:\Users\iceri\source\repos\AutoThrottle\XPSDK\CHeaders\XPLM;C:\Users\iceri\source\repos\AutoThrottle\XPSDK\CHeaders\Wrappers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
