* fixes error with disabling PID integrator * new values for C90B and CitationX

--- a/C90B.ini
+++ b/C90B.ini
@@ -9,10 +9,10 @@
 ######################
 # Some Overshoot 
 # base Kp: 0.5
-#kp=0.165
-#ki=0.1710597932
-#kd=0.2122065
-#limIntMax=1.4614755057
+#kp=0.17
+#ki=0.1
+#kd=0.06
+#limIntMax=0.555
 ######################
 
 ######################
@@ -39,17 +39,23 @@
 #kd=0.3229347
 ######################
 
-######################
+###################### 
+# quite good; oscillates at lower speeds 145ias
 # PID
 # base Kp: 0.3
-kp=0.18
-ki=0.1255
-kd=0.22018275
-limIntMax=0.4
+#kp=0.18
+#ki=0.15
+#kd=0.225
+#limIntMax=0.5
 ######################
-tau=0.025
-limMin=0.25
+
+kp=0.17
+ki=0.1
+kd=0.06
+limIntMax=0.555
+tau=0.008
+limMin=0.05
 limMax=0.765
-limIntMin=0.25
+limIntMin=0.05
 setpoint=180.0
-pid_time=0.025
+pid_time=0.05
