--- a/XPlugin/XPlugin.vcxproj
+++ b/XPlugin/XPlugin.vcxproj
@@ -146,7 +146,8 @@
       <AdditionalDependencies>XPLM_64.lib;XPWidgets_64.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>$(SolutionDir)deploy-dbg.cmd</Command>
+      <Command>copy $(SolutionDir)Cessna_CitationX.ini $(OutDir)\Cessna_CitationX.ini /Y
+copy $(SolutionDir)C90B.ini $(OutDir)\C90B.ini /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
