--- a/XPlugin/XPlugin.vcxproj
+++ b/XPlugin/XPlugin.vcxproj
@@ -174,8 +174,11 @@ copy $(SolutionDir)C90B.ini $(OutDir)\C90B.ini /Y</Command>
       <AdditionalDependencies>XPLM_64.lib;XPWidgets_64.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(SolutionDir)Cessna_CitationX.ini $(OutDir)\Cessna_CitationX.ini /Y
-copy $(SolutionDir)C90B.ini $(OutDir)\C90B.ini /Y</Command>
+      <Command>copy $(SolutionDir)Cessna_CitationX.ini $(OutDir)Cessna_CitationX.ini /Y
+copy $(SolutionDir)C90B.ini $(OutDir)C90B.ini /Y
+copy $(OutDir)C90B.ini $(SolutionDir)_deploy\$(SolutionName)\win_x64\C90B.ini /Y
+copy $(OutDir)Cessna_CitationX.ini $(SolutionDir)_deploy\$(SolutionName)\win_x64\Cessna_CitationX.ini /Y
+copy $(OutDir)$(TargetFileName) $(SolutionDir)_deploy\$(SolutionName)\win_x64\$(TargetFileName) /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
